--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "basic",
+  "name": "BasicBackendWebpack",
   "version": "1.0.0",
   "description": "backend webpack",
-  "main": "bin/app.js",
+  "main": "bin/app/app.js",
   "scripts": {
     "build": "./node_modules/.bin/webpack --progress",
     "startServer": "node bin/app/app.js"
